scaling is working but there is a an issue with the y values not showing up.

--- a/src/less/components/2-molecules/status-chart.less
+++ b/src/less/components/2-molecules/status-chart.less
@@ -3,7 +3,7 @@
 .status-chart {
  .chart-container {
    svg.chart {
-     height: 2500px;
+     height: 1500px;
    }
   //  * {
   //    outline: 1px solid pink;
